# Codeforces

./: .cf_config.json  .clang-format  .courses.txt.swp  CMakeLists.txt  README.md  beautiful_matrices.c  bit++.c  cf-manager.py  cf_manager.py  courses.txt  domino_piling.c  form  lucky.cpp  main  niceQuestions  notes.txt  someTechniques  template.cpp  test.cpp  testc  vec
1000/: assembly.cpp  bin  choose_the_diff_ones.cpp  crafting.cpp  delt  gcdperm.cpp  gd_pref.cpp  k_sort  k_sort.cpp  main  max_cost_delt.cpp  min_eq_sum_subarr.cpp  mocha  monsters  monsters.cpp  perm  prep  prep_for_exam.cpp  raksh_revival.cpp  rasp  raspberries.cpp  scene  scenes_from_mem.cpp  strict_teacher  strict_teacher.cpp  superultra  superultra.cpp  swap  swap_and_delete.cpp  template.cpp  test.txt  two_bin_str.cpp  two_divisors.cpp
1100/: fence.cpp  main  oneThreeFive.cpp
1200/: kur  petr_and_combinan  petr_and_combinan.c  pref  prefsumaddicts.cpp
1400/: arr  gregarr.cpp  preparing_olympiad  preparing_olympiad.c
800/: petya_and_strings  petya_and_strings.c  test.txt  way_too_long_words.c
900/: card_game.cpp  clockwork  clockwork.cpp  colored_marbles.cpp  everyone_loves_tres  everyone_loves_tres.cpp  game_of_mathletes.cpp  kevin_and_perm.cpp  replace_char.cpp  satay.cpp
AOC/Day1/: main  two.cpp
AOC/Day2/: one.cpp  test
AOC/Day3/: one.cpp  two.cpp
AOC/Day4/: main  one.cpp  two.cpp
AlgorithmsOne/: HelloGoodbye.java  graph.go  knuthMethod.java
AlgorithmsOne/AnalysisOfAlgorithms/: code.cpp
AlgorithmsOne/Perlocation/: Percolation.java  PercolationStats.java  Perlocation.java
AlgorithmsOne/StackAndQueues/: Queue.h  Stack.h  code.cpp  structures.h
AlgorithmsOne/Union-Find/: code.cpp  perlocation.cpp
AlgorithmsOne/unionFind/: UnionFind.java  graph.go  union.java  unionFind.java
CPBook/: ds_and_libs.cpp
DataStructures/: CHT.cpp  LiChao.cpp  binaryLifting.cpp  heap.cpp  lazyProp.cpp  sparseTable.cpp
DataStructures/EulerTour/: LCA.cpp  main  one.cpp  test
DataStructures/SQRT/: decomposition.cpp  test
Euler/: 1.cpp  2.cpp  main
Learning/: README.md  study_plan.md
Learning/binary_search/: binary_search.md
Learning/bit_manipulation/: bit_manipulation.md  xor_techniques.md
Learning/data_structures/: advanced_ds.md  bitmask_segment_tree.md  data_structures.md  segment_trees.md  sparse_tables_and_sqrt.md
Learning/difference_arrays/: difference_arrays.md
Learning/dp/: advanced_techniques.md  classic_problems.md  fundamentals.md
Learning/graphs/: advanced_topics.md  mst_and_dsu.md  shortest_paths.md  traversals_and_connectivity.md
Learning/greedy/: greedy.md  observations.md
Learning/mistakes_and_lessons/: mistakes_and_lessons.md
Learning/number_theory/: combinatorics_and_divisors.md  modular_arithmetic.md  number_theory.md  observations.md  primes_and_gcd.md
Learning/patterns_and_tricks/: general_observations.md  patterns_and_tricks.md
Learning/prefix_sums/: prefix_sums.md
TLE/: bitManipulation.cpp  collectionMedian.cpp  main  notes.cpp  segmentTrees.cpp  slidingWindow.cpp
archive/TLE/: main  (+3 more)
autoSubmit/: cf_config.json  fetch.py  startchrome.sh  submit.py
beginnerContest/: buyBalls.cpp  k-bonacci.cpp  logicalFilling.cpp  main  tripleFour.cpp
binarySearch/: README.md  prog  resources
bitwise/: countingOnes.cpp  main  petr.cpp  submaskEnumeration.cpp  subsets.cpp
codechef/: cherry  cherrybits.cpp  twodimprefix.cpp
cpp/: Vector.cpp  main  test.cpp  testing.cpp
cses/: subarr  subarr_div.cpp
diffArrays/: README.md  niceQuestions  prog
dp/: README.md  prog  questionsToDo  questionsToRevise  test
env/: pyvenv.cfg
graph/: DSU.cpp  bfs.cpp  bipartiteBFS.cpp  courseSchedule.cpp  courseScheduleTwo.cpp  cycleDFS.cpp  cycleDirectedDFS.cpp  cyclicComponents.cpp  detectCycleUndirected.cpp  dfs.cpp  distinctIslands.cpp  floodFill.cpp  graph.cpp  kahn.cpp  main  provinces.cpp  rottingOranges.cpp  safeStates.cpp  safeStatesTwo.cpp  secretPass.cpp  surroundedRegions.cpp  test  test.txt  topoSort.cpp  twoButtons.cpp  zeroOneMatrix.cpp
graphs/: README.md  niceProblems  prog  test  toDo
kattis/: battlesim  battlesim.cpp
notes/: DP.txt  Tree.txt  general.txt
numberTheory/: README.md  problemsToDo  prog  test
old/: courses.txt  form
prefixSums/: README.md  prog  questionsToDo  questionsToRevise  resources  test
prefix_arr/: prefix_sum.md  subarr_sums_two.cpp  twodimprefix.cpp
prefix_xor/: range_xor.cpp
problem/: angrycyb.cpp  chef_and_queries  knap.cpp  knapsack  knapsack.cpp  kth_div.cpp  num_of_ways.cpp  odd_topic.cpp  range  range_sum.cpp  reach_val.cpp  string_three.cpp  string_two.cpp  subseq_summing_to_seven.cpp  subset_sum  subset_sum.c  three_sum
random/: GCDQueries.cpp  LCMChallenge.cpp  LIS.cpp  aGrowingTree.cpp  addition.cpp  alternatingSubsequence.cpp  alyona.cpp  anagrams.cpp  anton.cpp  arenaOfGreed.cpp  arrayGame.cpp  ass  avtoBus.cpp  balancedTunnel.cpp  ballstenzing.cpp  beautifulSum.cpp  bigSum.cpp  billboard.cpp  blocks.cpp  bloodCousins.cpp  brute  brute.cpp  buyingShovels.cpp  cardConstructions.cpp  cardTrick.cpp  chatBan.cpp  cheapTravel.cpp  consecutiveSubsequences.cpp  convexHullOptimization.cpp  countingCoprimePairs.cpp  coverage.cpp  coveredWalkway.cpp  dances.cpp  differentDivisors.cpp  distanceQueriesOnTree.cpp  distinct.cpp  divByEight.cpp  divisionUnion.cpp  divisors.cpp  doraAndSearch.cpp  (+95 more)
rangeQueries/: README.md  prog
recursion/: basic.cpp  combinationSum.cpp  combinationSumTwo.cpp  main  nQueensTwo.cpp  printPermutation.cpp  subsequencePrint.cpp  subsetSum.cpp
slidingWindow/: README.md  goodQuestions  prog  test
techniques/: bitmask.md  bitsets.md  bitwise_tricks.md  checking_pow_of_two.md  gen_perms_proof.md  knapsack_using_bitsets.md  prefix_sums.md  prefix_xor.md  scanf_tricks.md  speeding_io.md  submask_of_mask.md
test/: README.md  base10_to_base2.c  main  main.c  scanf  scanf.cpp  test.txt
toLookAtLater/: gift_set.cpp
tools/: test.py
topics/: largest_sum.cpp  lower_bound.cpp  rotatedArr.cpp  upper_bound.cpp
trees/: README.md  niceQuestions  prog
twoPointers/: README.md  prog  test
(+2922 files in other folders)
