cmake_minimum_required(VERSION 4.0)
project(Codeforces)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(old/dataStructures/queue)
include_directories(old/dataStructures/stack)
include_directories(old/Strix/allocator)
include_directories(old/Strix/allocator/src)
include_directories(old/Strix/allocator/src/allocator_implementations)
include_directories(old/Strix/allocator/src/checksum_implementations)
include_directories(old/Strix/header)
include_directories(old/topics/dequeue/implementation)
include_directories(old/topics/heap)
include_directories(old/topics/linkedList)
include_directories(old/topics/linkedList/usingDynArr)
include_directories(old/topics/linkedList/withArrays)
include_directories(old/topics/quickUnion)

add_executable(Codeforces
        atcoderContest/ABC/416/a.cpp
        atcoderContest/ABC/416/b.cpp
        atcoderContest/ABC/416/d.cpp
        atcoderContest/ABC/416/f.cpp
        atcoderContest/ABC/417/a.cpp
        atcoderContest/ABC/417/b.cpp
        atcoderContest/ABC/417/c.cpp
        atcoderContest/ABC/417/d.cpp
        atcoderContest/ABC/417/e.cpp
        atcoderContest/ABC/418/a.cpp
        atcoderContest/ABC/418/b.cpp
        atcoderContest/ABC/418/c.cpp
        atcoderContest/ABC/418/d.cpp
        atcoderContest/ABC/418/e.cpp
        atcoderContest/ABC/419/a.cpp
        atcoderContest/ABC/419/b.cpp
        atcoderContest/ABC/419/c.cpp
        atcoderContest/ABC/419/d.cpp
        atcoderContest/ABC/419/e.cpp
        atcoderContest/ABC/419/f.cpp
        binarySearch/algos/squareRoot.cpp
        binarySearch/problems/arrDiv/arrDiv.cpp
        binarySearch/problems/binarySearch/binarySearch.cpp
        binarySearch/problems/books/books.cpp
        binarySearch/problems/cellularNetwork/cellularNetwork.cpp
        binarySearch/problems/closestLeft/closestLeft.cpp
        binarySearch/problems/closestRight/closestRight.cpp
        binarySearch/problems/coloringGame/coloringGame.cpp
        binarySearch/problems/countingHaybales/countingHaybales.cpp
        binarySearch/problems/cowStalls/cowStalls.cpp
        binarySearch/problems/equation/equation.cpp
        binarySearch/problems/factoryMachines/factoryMachines.cpp
        binarySearch/problems/fastSearch/fastSearch.cpp
        binarySearch/problems/getTogether/getTogether.cpp
        binarySearch/problems/kthNumUnion/kthNumUnion.cpp
        binarySearch/problems/maxMedian/maxMedian.cpp
        binarySearch/problems/maxMinPath/maxMinPath.cpp
        binarySearch/problems/mexCount/mexCount.cpp
        binarySearch/problems/numPairs/numPairs.cpp
        binarySearch/problems/pairTopics/pairTopics.cpp
        binarySearch/problems/retaliation/retaliation.cpp
        binarySearch/problems/ropes/ropes.cpp
        binarySearch/problems/splitArray/splitArray.cpp
        binarySearch/problems/stringGame/stringGame.cpp
        binarySearch/problems/ternaryString/ternaryString.cpp
        binarySearch/problems/tPrime/tPrime.cpp
        binarySearch/problems/vanya/vanya.cpp
        binarySearch/problems/veryEasyTask/veryEasyTask.cpp
        binarySearch/problems/worms/worms.cpp
        bitwise/appleDivision.cpp
        bitwise/countingOnes.cpp
        bitwise/countingZeroes.cpp
        bitwise/knapsack.cpp
        bitwise/petr.cpp
        bitwise/submaskEnumeration.cpp
        bitwise/subsets.cpp
        contests/DivThree/1027/a.cpp
        contests/DivThree/1027/b.cpp
        contests/DivThree/1027/d.cpp
        contests/DivThree/1027/e.cpp
        contests/DivThree/1037/d.cpp
        contests/DivThree/1037/noCasinos.cpp
        contests/DivThree/1037/onlyOneDigit.cpp
        contests/DivThree/1037/willMakeIt.cpp
        contests/DivThree/1042/a.cpp
        contests/DivThree/1042/b.cpp
        contests/DivThree/1042/c.cpp
        contests/DivThree/1042/d.cpp
        contests/DivThree/1042/e.cpp
        contests/DivThree/1042/f.cpp
        contests/DivThree/1042/g.cpp
        contests/DivTwo/1039/a.cpp
        contests/DivTwo/1039/b.cpp
        contests/DivTwo/1039/c.cpp
        contests/DivTwo/1039/d.cpp
        contests/DivTwo/1040/a.cpp
        contests/DivTwo/1040/b.cpp
        contests/DivTwo/1040/c.cpp
        contests/DivTwo/1041/a.cpp
        env/lib/python3.12/site-packages/websockets/speedups.c
        env/lib64/python3.12/site-packages/websockets/speedups.c
        graphs/algos/allShortestPaths.cpp
        graphs/algos/bellmanFord.cpp
        graphs/algos/bellmanFordRevise.cpp
        graphs/algos/dijkstra.cpp
        graphs/algos/disjointSetUnion.cpp
        graphs/algos/floydWarshall.cpp
        graphs/algos/floydWarshallRevise.cpp
        graphs/algos/generalBFS.cpp
        graphs/algos/kruskals.cpp
        graphs/algos/notes.cpp
        graphs/algos/prims.cpp
        graphs/algos/shortestCycles.cpp
        graphs/algos/spanningTreeRevise.cpp
        graphs/colin/bearFriendship.cpp
        graphs/colin/newsDistribution.cpp
        graphs/colin/nphard.cpp
        graphs/colin/rumor.cpp
        graphs/cses/buildingRoads.cpp
        graphs/cses/buildingTeams.cpp
        graphs/cses/countingRooms.cpp
        graphs/cses/cycleFinding.cpp
        graphs/cses/flightDiscount.cpp
        graphs/cses/highScore.cpp
        graphs/cses/labyrinth.cpp
        graphs/cses/messageRoute.cpp
        graphs/cses/monsters.cpp
        graphs/cses/roundTrip.cpp
        graphs/cses/shortestRoutesOne.cpp
        graphs/cses/shortestRoutesTwo.cpp
        graphs/problems/accountsMerge/accountsMerge.cpp
        graphs/problems/alienDict/alienDict.cpp
        graphs/problems/ballInBerland/ballInBerland.cpp
        graphs/problems/bersu/bersu.cpp
        graphs/problems/bfs/bfs.cpp
        graphs/problems/bipartiteBFS/bipartiteBFS.cpp
        graphs/problems/cheapestFlights/cheapestFlights.cpp
        graphs/problems/courseSchedule/courseSchedule.cpp
        graphs/problems/courseScheduleTwo/courseScheduleTwo.cpp
        graphs/problems/cycleBFS/cycleBFS.cpp
        graphs/problems/cycleDFS/cycleDFS.cpp
        graphs/problems/cycleDirectedDFS/cycleDirectedDFS.cpp
        graphs/problems/cyclicComponents/cyclicComponents.cpp
        graphs/problems/dfs/dfs.cpp
        graphs/problems/dijkstra/dijkstra.cpp
        graphs/problems/distinctIslands/distinctIslands.cpp
        graphs/problems/districtConnections/districtConnections.cpp
        graphs/problems/DSU/DSU.cpp
        graphs/problems/enclaves/enclaves.cpp
        graphs/problems/findTheCity/findTheCity.cpp
        graphs/problems/floodFill/floodFill.cpp
        graphs/problems/graph/graph.cpp
        graphs/problems/iceSkating/iceSkating.cpp
        graphs/problems/islands/islands.cpp
        graphs/problems/kahn/kahn.cpp
        graphs/problems/largeIsland/largeIsland.cpp
        graphs/problems/longJumps/longJumps.cpp
        graphs/problems/maze/maze.cpp
        graphs/problems/minEffort/minEffort.cpp
        graphs/problems/mocha/mocha.cpp
        graphs/problems/mortalKombat/mortalKombat.cpp
        graphs/problems/mostStones/mostStones.cpp
        graphs/problems/networkConnected/networkConnected.cpp
        graphs/problems/numDest/numDest.cpp
        graphs/problems/park/park.cpp
        graphs/problems/provinces/provinces.cpp
        graphs/problems/rottingOranges/rottingOranges.cpp
        graphs/problems/safeStates/safeStates.cpp
        graphs/problems/safeStatesTwo/safeStatesTwo.cpp
        graphs/problems/sakurako/sakurako.cpp
        graphs/problems/secretPass/secretPass.cpp
        graphs/problems/shortestBinary/shortestBinary.cpp
        graphs/problems/shortestPathInDAG/shortestPathInDAG.cpp
        graphs/problems/shortestPathInUndirectedGraph/shortestPathInUndirectedGraph.cpp
        graphs/problems/shortestPathWeightedUndirectedGraph/shortestPathWeightedUndirectedGraph.cpp
        graphs/problems/spanningTree/spanningTree.cpp
        graphs/problems/surroundedRegions/surroundedRegions.cpp
        graphs/problems/theLakes/theLakes.cpp
        graphs/problems/topoSort/topoSort.cpp
        graphs/problems/twoButtons/twoButtons.cpp
        graphs/problems/wordLadder/wordLadder.cpp
        graphs/problems/wordLadderTwo/wordLadderTwo.cpp
        graphs/problems/zeroOneMatrix/zeroOneMatrix.cpp
        old/1000/assembly.cpp
        old/1000/card.cpp
        old/1000/card_game.cpp
        old/1000/cards.cpp
        old/1000/choose_the_diff_ones.cpp
        old/1000/crafting.cpp
        old/1000/game_with_doors.c
        old/1000/gcdperm.cpp
        old/1000/gd_pref.cpp
        old/1000/k_sort.cpp
        old/1000/lucky_division.cpp
        old/1000/make_eq_again.cpp
        old/1000/max_cost_delt.cpp
        old/1000/min_eq_sum_subarr.cpp
        old/1000/mocha.cpp
        old/1000/nastia.cpp
        old/1000/paint_a_strip.cpp
        old/1000/perm_print.cpp
        old/1000/prep_for_exam.cpp
        old/1000/raksh_revival.cpp
        old/1000/raspberries.cpp
        old/1000/removals.cpp
        old/1000/rudolf.cpp
        old/1000/scenes_from_mem.cpp
        old/1000/shifts_and_sorting.cpp
        old/1000/strict_teacher.cpp
        old/1000/superultra.cpp
        old/1000/swap_and_delete.cpp
        old/1000/template.cpp
        old/1000/two_bin_str.cpp
        old/1000/two_divisors.cpp
        old/1000/xor_seq.cpp
        old/1100/fence.cpp
        old/1100/oneThreeFive.cpp
        old/1100/oneThreeFiveBottomUp.cpp
        old/1200/kuriyama.cpp
        old/1200/petr_and_combinan.c
        old/1200/prefsumaddicts.cpp
        old/1400/gregarr.cpp
        old/1400/preparing_olympiad.c
        old/800/beautiful_matrices.c
        old/800/bit++.c
        old/800/divisibility_problem.cpp
        old/800/domino_piling.c
        old/800/petya_and_strings.c
        old/800/read_lines.c
        old/800/team.c
        old/800/Watermelon.cpp
        old/800/way_too_long_words.c
        old/900/clockwork.cpp
        old/900/colored_marbles.cpp
        old/900/everyone_loves_tres.cpp
        old/900/game_of_mathletes.cpp
        old/900/kevin_and_perm.cpp
        old/900/replace_char.cpp
        old/900/satay.cpp
        old/atcoder/400/leapingtak.cpp
        old/beginnerContest/contest397/cube.cpp
        old/beginnerContest/contest397/thermometer.cpp
        old/beginnerContest/contest397/ticketGateLog.cpp
        old/beginnerContest/contest397/varietySplit.cpp
        old/beginnerContest/contest398/bonfire.cpp
        old/beginnerContest/contest398/doorsInTheCentre.cpp
        old/beginnerContest/contest398/fullHouse.cpp
        old/beginnerContest/contest398/uniqueness.cpp
        old/beginnerContest/contest399/hammingDistance.cpp
        old/beginnerContest/contest399/makeItForest.cpp
        old/beginnerContest/contest399/powerRangeSum.cpp
        old/beginnerContest/contest399/rankingWithTies.cpp
        old/beginnerContest/contest399/switchSeats.cpp
        old/beginnerContest/contest400/abc400.cpp
        old/beginnerContest/contest400/C.cpp
        old/beginnerContest/contest400/sumOfGeometric.cpp
        old/beginnerContest/contest401/k-bonacci.cpp
        old/beginnerContest/contest401/logicalFilling.cpp
        old/beginnerContest/contest401/unauthorized.cpp
        old/beginnerContest/contest402/cbc.cpp
        old/beginnerContest/contest402/dislikeFoods.cpp
        old/beginnerContest/contest402/lineCrossing.cpp
        old/beginnerContest/contest402/restrauntQueue.cpp
        old/beginnerContest/buyBalls.cpp
        old/beginnerContest/cardPile.cpp
        old/beginnerContest/tripleFour.cpp
        old/codechef/cherrybits.cpp
        old/codechef/twodimprefix.cpp
        old/cses/subarr_div.cpp
        old/cses/subarr_sums_two.cpp
        old/dataStructures/queue/queue.c
        old/dataStructures/queue/queue.h
        old/dataStructures/stack/gen_input.c
        old/dataStructures/stack/minmax.c
        old/dataStructures/stack/stack.c
        old/dataStructures/stack/stack.h
        old/kattis/battlesim.cpp
        old/kattis/hissing.c
        old/prefix_arr/subarr_div.cpp
        old/prefix_arr/subarr_sums_two.cpp
        old/prefix_arr/twodimprefix.cpp
        old/prefix_xor/range_xor.cpp
        old/problem/angrycyb.cpp
        old/problem/apple_division.cpp
        old/problem/base10_to_base2.c
        old/problem/basic_string_one.cpp
        old/problem/chef_and_queries.cpp
        old/problem/forming_teams.cpp
        old/problem/knap.cpp
        old/problem/knapsack.cpp
        old/problem/kth_div.cpp
        old/problem/max_subarr_sum.c
        old/problem/num_of_ways.cpp
        old/problem/odd_topic.cpp
        old/problem/range_sum.cpp
        old/problem/reach_val.cpp
        old/problem/string_three.cpp
        old/problem/string_two.cpp
        old/problem/subseq_summing_to_seven.cpp
        old/problem/subset_sum.c
        old/problem/three_sum.cpp
        old/problem/unique_num.cpp
        old/Strix/allocator/src/allocator_implementations/inline_allocator.h
        old/Strix/allocator/src/allocator_implementations/segmented_allocator.h
        old/Strix/allocator/src/checksum_implementations/crc32.h
        old/Strix/allocator/src/checksum_implementations/xxh32.h
        old/Strix/allocator/allocator.h
        old/Strix/allocator/mem_alloc.h
        old/Strix/header/string_search.h
        old/Strix/header/strix.h
        old/Strix/header/strix_errno.h
        old/Strix/source/main.c
        old/Strix/source/string_search.c
        old/Strix/source/strix.c
        old/Strix/source/strix_errno.c
        old/techniques/generating_all_perms.cpp
        old/techniques/subsequence_jmptable.cpp
        old/test/scanf.cpp
        old/toLookAtLater/bomb_adv.cpp
        old/toLookAtLater/gift_set.cpp
        old/toLookAtLater/magic_ship.cpp
        old/toLookAtLater/occlusion.cpp
        old/toLookAtLater/oddly_similar.cpp
        old/toLookAtLater/swap_space.cpp
        old/topics/binarySearch/minOfMax/cows.cpp
        old/topics/binarySearch/minOfMax/getTogether.cpp
        old/topics/binarySearch/minOfMax/splitArray.cpp
        old/topics/binarySearch/monotoneSearch/closestLeft.cpp
        old/topics/binarySearch/monotoneSearch/closestRight.cpp
        old/topics/binarySearch/monotoneSearch/closestToTheLeft.cpp
        old/topics/binarySearch/monotoneSearch/closestToTheRight.cpp
        old/topics/binarySearch/monotoneSearch/equation.cpp
        old/topics/binarySearch/monotoneSearch/fast_search.cpp
        old/topics/binarySearch/monotoneSearch/good.cpp
        old/topics/binarySearch/monotoneSearch/goodTwo.cpp
        old/topics/binarySearch/monotoneSearch/hamburgers.cpp
        old/topics/binarySearch/monotoneSearch/onRealNums.cpp
        old/topics/binarySearch/monotoneSearch/ropes.cpp
        old/topics/binarySearch/monotoneSearch/stringGame.cpp
        old/topics/binarySearch/monotoneSearch/studentCouncils.cpp
        old/topics/binarySearch/monotoneSearch/task.cpp
        old/topics/binarySearch/problems/arr_div.cpp
        old/topics/binarySearch/problems/bomb.cpp
        old/topics/binarySearch/problems/digit.cpp
        old/topics/binarySearch/problems/final_boss.cpp
        old/topics/binarySearch/problems/function.cpp
        old/topics/binarySearch/problems/hood.cpp
        old/topics/binarySearch/problems/kth_sum.cpp
        old/topics/binarySearch/problems/lower_bound.cpp
        old/topics/binarySearch/problems/machines.cpp
        old/topics/binarySearch/problems/mafia.cpp
        old/topics/binarySearch/problems/max_median.cpp
        old/topics/binarySearch/problems/median.cpp
        old/topics/binarySearch/problems/meet.cpp
        old/topics/binarySearch/problems/meeting_place.cpp
        old/topics/binarySearch/problems/peak.cpp
        old/topics/binarySearch/problems/project.cpp
        old/topics/binarySearch/problems/queries.cpp
        old/topics/binarySearch/problems/root.cpp
        old/topics/binarySearch/problems/sensor_opt.cpp
        old/topics/binarySearch/problems/sensor_opt2.cpp
        old/topics/binarySearch/problems/static_range.cpp
        old/topics/binarySearch/problems/ugly.cpp
        old/topics/binarySearch/problems/upper_bound.cpp
        old/topics/binarySearch/agressive_cows.cpp
        old/topics/binarySearch/binary_search.cpp
        old/topics/binarySearch/book_allocation.cpp
        old/topics/binarySearch/bouquet.cpp
        old/topics/binarySearch/first_last.cpp
        old/topics/binarySearch/koko.cpp
        old/topics/binarySearch/kth_num.cpp
        old/topics/binarySearch/kth_sum.cpp
        old/topics/binarySearch/largest_sum.cpp
        old/topics/binarySearch/lower_bound.cpp
        old/topics/binarySearch/median.cpp
        old/topics/binarySearch/medianTwo.cpp
        old/topics/binarySearch/missing_positive.cpp
        old/topics/binarySearch/peak_finding.cpp
        old/topics/binarySearch/rot_arr.cpp
        old/topics/binarySearch/rotArr.cpp
        old/topics/binarySearch/rotArrDuplicate.cpp
        old/topics/binarySearch/rotArrMin.cpp
        old/topics/binarySearch/rotatedArr.cpp
        old/topics/binarySearch/ship.cpp
        old/topics/binarySearch/single_element.cpp
        old/topics/binarySearch/squareRoot.cpp
        old/topics/binarySearch/upper_bound.cpp
        old/topics/bitsets/ada.cpp
        old/topics/bitsets/bitset.cpp
        old/topics/bitwise/appleDivision.cpp
        old/topics/bitwise/bars.cpp
        old/topics/bitwise/chefqueries.cpp
        old/topics/bitwise/diff_nums.cpp
        old/topics/bitwise/elephant.cpp
        old/topics/bitwise/gnome.cpp
        old/topics/bitwise/knapsack.cpp
        old/topics/bitwise/lucky.cpp
        old/topics/bitwise/manyformulas.cpp
        old/topics/bitwise/oddthings.cpp
        old/topics/bitwise/olympiad.cpp
        old/topics/bitwise/petercombination.cpp
        old/topics/bitwise/submaskEnumeration.cpp
        old/topics/bitwise/subset_sum.cpp
        old/topics/dequeue/implementation/dequeue.c
        old/topics/dequeue/implementation/dequeue.h
        old/topics/dequeue/implementation/main.c
        old/topics/dequeue/implementation/memalloc.c
        old/topics/dequeue/implementation/memalloc.h
        old/topics/dequeue/bananini.cpp
        old/topics/dequeue/cards.cpp
        old/topics/dequeue/dequeue.cpp
        old/topics/dequeue/e_one.cpp
        old/topics/dequeue/social_network.cpp
        old/topics/dequeue/valeriy.cpp
        old/topics/dynamicProgramming/1D/climbing_stairs.cpp
        old/topics/dynamicProgramming/1D/coin_change.cpp
        old/topics/dynamicProgramming/1D/coin_change_again.cpp
        old/topics/dynamicProgramming/1D/coin_change_ways.cpp
        old/topics/dynamicProgramming/1D/combination_sum.cpp
        old/topics/dynamicProgramming/1D/cookies.cpp
        old/topics/dynamicProgramming/1D/knapsack.cpp
        old/topics/dynamicProgramming/1D/knapsack_recursive.cpp
        old/topics/dynamicProgramming/1D/partition.cpp
        old/topics/dynamicProgramming/1D/partition_min.cpp
        old/topics/dynamicProgramming/1D/partition_min_any.cpp
        old/topics/dynamicProgramming/1D/robber.cpp
        old/topics/dynamicProgramming/1D/robber_two.cpp
        old/topics/dynamicProgramming/1D/subset_sum.cpp
        old/topics/dynamicProgramming/1D/subsetsSumCount.cpp
        old/topics/dynamicProgramming/1D/target_sum.cpp
        old/topics/dynamicProgramming/colin_galen_set/broken_keyboard.cpp
        old/topics/dynamicProgramming/colin_galen_set/keys.cpp
        old/topics/dynamicProgramming/colin_galen_set/lecture.cpp
        old/topics/dynamicProgramming/colin_galen_set/vitamins.cpp
        old/topics/dynamicProgramming/grid/falling_path.cpp
        old/topics/dynamicProgramming/grid/path_sum.cpp
        old/topics/dynamicProgramming/grid/triangle.cpp
        old/topics/dynamicProgramming/grid/unique_paths.cpp
        old/topics/dynamicProgramming/grid/unique_paths_two.cpp
        old/topics/dynamicProgramming/strings/common_subseq.cpp
        old/topics/dynamicProgramming/strings/delete.cpp
        old/topics/dynamicProgramming/strings/missing.cpp
        old/topics/dynamicProgramming/strings/palindromic.cpp
        old/topics/dynamicProgramming/dynamic.cpp
        old/topics/greedy/abdul/knapsack.cpp
        old/topics/greedy/algo.cpp
        old/topics/greedy/books.cpp
        old/topics/greedy/covered.cpp
        old/topics/greedy/ferrisWheel.cpp
        old/topics/greedy/grouping.cpp
        old/topics/greedy/increArray.cpp
        old/topics/greedy/increasing_triplet.cpp
        old/topics/greedy/madScientist.cpp
        old/topics/greedy/maxSubarrSum.cpp
        old/topics/greedy/movieFestival.cpp
        old/topics/greedy/prefixSum.cpp
        old/topics/greedy/setsAndUnion.cpp
        old/topics/greedy/stickLen.cpp
        old/topics/greedy/sweets.cpp
        old/topics/greedy/twoSets.cpp
        old/topics/heap/binary_tree.c
        old/topics/heap/binary_tree.h
        old/topics/heap/dynarr.c
        old/topics/heap/dynarr.h
        old/topics/heap/max_heap.c
        old/topics/heap/max_heap.h
        old/topics/heap/priority_queue.c
        old/topics/heap/priority_queue.h
        old/topics/heap/queue.c
        old/topics/heap/queue.h
        old/topics/linkedList/usingDynArr/linked_list.c
        old/topics/linkedList/usingDynArr/linked_list.h
        old/topics/linkedList/usingDynArr/main.c
        old/topics/linkedList/withArrays/linked_list.c
        old/topics/linkedList/withArrays/linked_list.h
        old/topics/linkedList/withArrays/main.c
        old/topics/linkedList/linked_list.c
        old/topics/linkedList/linked_list.h
        old/topics/linkedList/main.c
        old/topics/linkedList/memalloc.c
        old/topics/linkedList/memalloc.h
        old/topics/list/list.cpp
        old/topics/maps/maps.cpp
        old/topics/maps/restrauntCustomers.cpp
        old/topics/maps/subarrayDivisibility.cpp
        old/topics/maps/subarrSumsTwo.cpp
        old/topics/maps/threeSum.cpp
        old/topics/maps/twoSum.cpp
        old/topics/prefixSum/angryCyborg.cpp
        old/topics/prefixSum/gcdOnBlackboard.cpp
        old/topics/prefixSum/good.cpp
        old/topics/prefixSum/goodSubarrays.cpp
        old/topics/prefixSum/haybale.cpp
        old/topics/prefixSum/leapingTak.cpp
        old/topics/prefixSum/prefix.cpp
        old/topics/prefixSum/product.cpp
        old/topics/prefixSum/rangeUpdates.cpp
        old/topics/prefixSum/staticRangeSum.cpp
        old/topics/prefixSum/subarrayDivisibility.cpp
        old/topics/prefixSum/subarraySums2.cpp
        old/topics/prefixSum/subarrSum.cpp
        old/topics/prefixSum/subseqSummingToSevens.cpp
        old/topics/priorityQueue/potions.cpp
        old/topics/priorityQueue/powering_the_hero.cpp
        old/topics/priorityQueue/priority_queue.cpp
        old/topics/priorityQueue/room_allocation.cpp
        old/topics/priorityQueue/task_scheduler.cpp
        old/topics/quickUnion/main.c
        old/topics/quickUnion/quick_union.c
        old/topics/quickUnion/quick_union.h
        old/topics/recursion/choosingCombinations/combinationFour.cpp
        old/topics/recursion/choosingCombinations/combinationOne.cpp
        old/topics/recursion/choosingCombinations/combinationThree.cpp
        old/topics/recursion/choosingCombinations/combinationTwo.cpp
        old/topics/recursion/anySubsequence.cpp
        old/topics/recursion/combinationSum.cpp
        old/topics/recursion/combinationSumTwo.cpp
        old/topics/recursion/countingInversions.cpp
        old/topics/recursion/kthPermutation.cpp
        old/topics/recursion/numSubsequence.cpp
        old/topics/recursion/palindrome.cpp
        old/topics/recursion/permutation.cpp
        old/topics/recursion/permutationTwo.cpp
        old/topics/recursion/reverse.cpp
        old/topics/recursion/reverseTraversal.cpp
        old/topics/recursion/subsequence.cpp
        old/topics/recursion/subsetOfMultiset.cpp
        old/topics/recursion/subsetSum.cpp
        old/topics/recursion/summation.cpp
        old/topics/sets/collecting_numbers.cpp
        old/topics/sets/concert_tickets.cpp
        old/topics/sets/distinctNumbers.cpp
        old/topics/sets/sets.cpp
        old/topics/sets/towers.cpp
        old/topics/sets/unexpressed.cpp
        old/topics/sorting/bubbleSort.cpp
        old/topics/sorting/insertionSort.cpp
        old/topics/sorting/mergeSort.cpp
        old/topics/sorting/quickSort.cpp
        old/topics/sorting/selectionSort.cpp
        old/topics/stl/queue/children.cpp
        old/topics/stl/queue/queue.c
        old/topics/stl/queue/queue.cpp
        old/topics/stl/queue/team.cpp
        old/topics/stl/queue/teamQueue.cpp
        old/topics/stl/stack/longest.cpp
        old/topics/stl/stack/longestRegularBracketSequence.cpp
        old/topics/stl/stack/nearestSmallestInt.cpp
        old/topics/stl/stack/stack.c
        old/topics/stl/stack/stack.cpp
        old/topics/stl/stack/validParenthesis.cpp
        old/topics/stl/vectors/vec.cpp
        old/topics/stl/indianSummer.cpp
        old/topics/stl/iterators.cpp
        old/topics/stl/pairs.cpp
        old/topics/stl/template.cpp
        old/topics/stl/tuple.cpp
        old/topics/twoPointer/EDU/step2/big_sum.cpp
        old/topics/twoPointer/EDU/step2/good_sum.cpp
        old/topics/twoPointer/EDU/step2/small_set.cpp
        old/topics/twoPointer/EDU/step2/small_spread.cpp
        old/topics/twoPointer/EDU/step2/spread.cpp
        old/topics/twoPointer/EDU/big_sum.cpp
        old/topics/twoPointer/EDU/equal.cpp
        old/topics/twoPointer/EDU/merge.cpp
        old/topics/twoPointer/EDU/num_big_sum.cpp
        old/topics/twoPointer/EDU/num_small_sum.cpp
        old/topics/twoPointer/EDU/small_set.cpp
        old/topics/twoPointer/EDU/small_spread.cpp
        old/topics/twoPointer/EDU/small_sum.cpp
        old/topics/twoPointer/EDU/smaller.cpp
        old/topics/twoPointer/affection.cpp
        old/topics/twoPointer/books.cpp
        old/topics/twoPointer/cellular_network.cpp
        old/topics/twoPointer/playlist.cpp
        old/topics/twoPointer/quiz_master.cpp
        old/topics/twoPointer/subarrSumOne.cpp
        old/template.cpp
        old/usual_temp.cpp
        recursion/basic.cpp
        recursion/combinationSum.cpp
        recursion/combinationSumTwo.cpp
        recursion/knapsack.cpp
        recursion/nQueensTwo.cpp
        recursion/printPermutation.cpp
        recursion/subsequencePrint.cpp
        recursion/subsetsTwo.cpp
        recursion/subsetSum.cpp
        twoPointers/algos/merge.cpp
        twoPointers/algos/notes.cpp
        twoPointers/algos/numEqual.cpp
        twoPointers/algos/smaller.cpp
        twoPointers/problems/bigSum/bigSum.cpp
        twoPointers/problems/loopedPlaylist/loopedPlaylist.cpp
        twoPointers/problems/numBigSum/numBigSum.cpp
        twoPointers/problems/numSmallSum/numSmallSum.cpp
        twoPointers/problems/smallSet/smallSet.cpp
        twoPointers/problems/smallSpread/smallSpread.cpp
        twoPointers/problems/smallSum.cpp/smallSum.cpp.cpp
        twoPointers/problems/subarraySumsOne/subarraySumsOne.cpp
        twoPointers/problems/sumTwo/sumTwo.cpp
        twoPointers/problems/threeSum/threeSum.cpp
        twoPointers/problems/totalLength/totalLength.cpp
        template.cpp
        cpp/modules/Vector.cpp
        cpp/modules/testing.cpp
        cpp/modules/Complex.cpp
        cpp/modules/Container.cpp
        cpp/modules/List.cpp
        twoPointers/problems/cheCity/cheCity.cpp
        twoPointers/problems/stylishClothes/stylishClothes.cpp
        twoPointers/problems/knapsackSegment/knapsackSegment.cpp
        twoPointers/problems/cardSubstrings/cardSubstrings.cpp
        twoPointers/problems/rudeSubstring/rudeSubstring.cpp
        twoPointers/problems/ABKnapsack/ABKnapsack.cpp
        contests/DivThree/1043/a.cpp
        contests/DivThree/1043/b.cpp
        contests/DivThree/1043/c.cpp
        contests/DivThree/1043/c2.cpp
        contests/DivThree/1043/d.cpp
        contests/DivThree/1043/e.cpp
        contests/DivThree/1043/f.cpp
        twoPointers/problems/numPairs/numPairs.cpp
        twoPointers/problems/theyAreEverywhere/theyAreEverywhere.cpp
        twoPointers/problems/eatingCandies/eatingCandies.cpp
        twoPointers/problems/threeParts/threeParts.cpp
        prefixSums/algos/code.cpp
        prefixSums/problems/staticRangeSum/staticRangeSum.cpp
        prefixSums/problems/rangeUpdate/rangeUpdate.cpp
)
